# kratos-ai

./: .gitignore  LICENSE  README.md  pyproject.toml  run_server.py
dashboard/: package-lock.json  package.json
dashboard/src/: App.jsx
dashboard/src/components/: ActivityFeed.jsx  ClusterHealth.jsx  Incidents.jsx  KnowledgeStats.jsx  Predictions.jsx  Remediations.jsx
docs/: CONTRIBUTING.md
examples/: basic_usage.py
src/api/: __init__.py  routes.py
src/core/: __init__.py  brain.py  knowledge_base.py  types.py
src/kratos_ai/: __init__.py
src/kratos_ai.egg-info/: SOURCES.txt  entry_points.txt  requires.txt
src/ml/: __init__.py  predictors.py
src/remediation/: __init__.py  actions.py  engine.py  safety.py
tests/: test_core.py
