[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kratos-ai"
version = "0.1.0"
description = "Self-Healing Kubernetes Intelligence - Learns, Predicts, Remediates"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    {name = "FineOps Team", email = "asheeshgupta999@gmail.com"}
]
keywords = [
    "kubernetes",
    "self-healing",
    "aiops",
    "mlops",
    "observability",
    "remediation",
    "prediction",
    "machine-learning",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Systems Administration",
]

dependencies = [
    "kubernetes>=28.1.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.5.0",
    "numpy>=1.24.0",
    "prometheus-client>=0.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.9",
    "mypy>=1.8.0",
    "black>=23.12.0",
]
ml = [
    "scikit-learn>=1.3.0",
    "pandas>=2.1.0",
]

[project.urls]
Homepage = "https://github.com/fineops/kratos-ai"
Documentation = "https://github.com/fineops/kratos-ai#readme"
Repository = "https://github.com/fineops/kratos-ai.git"
Issues = "https://github.com/fineops/kratos-ai/issues"

[project.scripts]
kratos = "kratos_ai.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
